# ddt

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
docs/plans/: ibkr-client-portal.md  market-data-guardrails-workflow.md  taxonomy-expiry-caps-reporting-imports.md  v1.md
src/ddt/: __init__.py  cli.py  config.py  models.py  sample_data.py  store.py
src/ddt/approval/: service.py
src/ddt/connectors/alpaca/: client.py
src/ddt/connectors/ibkr/: client.py
src/ddt/connectors/news/: base.py
src/ddt/connectors/polygon/: client.py
src/ddt/guardrails/: orders.py
src/ddt/news/: normalize.py
src/ddt/risk/: rules.py
src/ddt/strategies/: base.py  news_reaction.py
tests/: test_alpaca.py  test_alpaca_workflow.py  test_guardrails.py  test_ibkr.py  test_news_enrichment.py  test_polygon.py  test_smoke.py
